kustomize-demo/simple-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
           limits:
             memory: "256Mi"
             cpu: "1"
           requests:
             memory: "128Mi"
             cpu: "500m"
